<resources>
    <string name="app_name">Alarm and Player</string>
    <string name="title_setting">Settings</string>
    <string name="title_alarm">Alarms</string>
    <string name="title_select_sound">Select Sound</string>

    <string name="weather_main">%1$d\u00B0 %2$s</string>


    <!--fontawesome icons-->
    <string name="icon_arrow_left">\uf060</string>
    <string name="icon_arrow_right">\uf061</string>
    <string name="icon_plus">\uf067</string>
    <string name="icon_bell">\uf0f3</string>
    <string name="icon_play">\uf04b</string>
    <string name="icon_stop">\uf04d</string>
    <string name="icon_spotify">\uf1bc</string>
    <string name="icon_sound">\uf001</string>
    <string name="icon_sun">\uf185</string>
    <string name="icon_location"></string>
    <string name="icon_alarm">\uf34e</string>

    <!--Toast messages-->
    <string name="toast_permission_needed_message">We need that permission to list all the audio files</string>

    <!--screen text-->
    <string name="msg_alarm_hour_min">Next alarm in %1$02d hour%2$s %3$02d minute%4$s</string>
    <string name="msg_alarm_min">Next alarm in %1$02d minute%2$s</string>
    <string name="msg_alarm_now">Ringing Now</string>


    <!--preferences-->
    <string name="pref_setting_ambient_key">setting_ambient_timeout</string>
    <string name="setting_ambient_desc">Activate ambient display after %1$d seconds</string>
    <string name="setting_ambient_title">Ambient Display</string>

    <string name="pref_setting_location_key">setting_location</string>
    <string name="setting_location_title">Weather Location</string>

    <string name="pref_setting_alarmsound_key">setting_alarm</string>
    <string name="pref_setting_alarm_title">Alarm Sound</string>




    <!--weather icon unicode according to open weather map
        https://github.com/erikflowers/weather-icons/ -> icon font
        https://erikflowers.github.io/weather-icons/api-list.html -> open weather map codes to css
    -->
    <string name="wi_200">\uf02d</string>
    <string name="wi_201">\uf02d</string>
    <string name="wi_202">\uf02d</string>
    <string name="wi_210">\uf025</string>
    <string name="wi_211">\uf025</string>
    <string name="wi_212">\uf025</string>
    <string name="wi_221">\uf025</string>
    <string name="wi_230">\uf02d</string>
    <string name="wi_231">\uf02d</string>
    <string name="wi_232">\uf02d</string>
    <string name="wi_300">\uf02b</string>
    <string name="wi_301">\uf02b</string>
    <string name="wi_302">\uf028</string>
    <string name="wi_310">\uf028</string>
    <string name="wi_311">\uf028</string>
    <string name="wi_312">\uf028</string>
    <string name="wi_313">\uf028</string>
    <string name="wi_314">\uf028</string>
    <string name="wi_321">\uf02b</string>
    <string name="wi_500">\uf02b</string>
    <string name="wi_501">\uf028</string>
    <string name="wi_502">\uf028</string>
    <string name="wi_503">\uf028</string>
    <string name="wi_504">\uf028</string>
    <string name="wi_511">\uf026</string>
    <string name="wi_520">\uf029</string>
    <string name="wi_521">\uf029</string>
    <string name="wi_522">\uf029</string>
    <string name="wi_531">\uf02c</string>
    <string name="wi_600">\uf02a</string>
    <string name="wi_601">\uf0b4</string>
    <string name="wi_602">\uf02a</string>
    <string name="wi_611">\uf026</string>
    <string name="wi_612">\uf026</string>
    <string name="wi_615">\uf026</string>
    <string name="wi_616">\uf026</string>
    <string name="wi_620">\uf026</string>
    <string name="wi_621">\uf02a</string>
    <string name="wi_622">\uf02a</string>
    <string name="wi_701">\uf029</string>
    <string name="wi_711">\uf062</string>
    <string name="wi_721">\uf0b6</string>
    <string name="wi_731">\uf063</string>
    <string name="wi_741">\uf04a</string>
    <string name="wi_761">\uf063</string>
    <string name="wi_762">\uf063</string>
    <string name="wi_771">\uf011</string>
    <string name="wi_781">\uf056</string>
    <string name="wi_800">\uf02e</string>
    <string name="wi_801">\uf022</string>
    <string name="wi_802">\uf022</string>
    <string name="wi_803">\uf022</string>
    <string name="wi_804">\uf086</string>
    <string name="wi_900">\uf056</string>
    <string name="wi_901">\uf01d</string>
    <string name="wi_902">\uf073</string>
    <string name="wi_903">\uf076</string>
    <string name="wi_904">\uf072</string>
    <string name="wi_905">\uf021</string>
    <string name="wi_906">\uf024</string>
    <string name="wi_957">\uf050</string>
</resources>
