<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            style="@style/Text.Icon.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/Text.Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_setting"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="56dp"
        android:paddingEnd="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/back">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/setting_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_location"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_location_title"/>

                    <TextView
                        android:id="@+id/setting_location_desc"
                        android:layout_width="wrap_content"
                        tools:text="Bangalore, India"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_ambient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_sun"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_ambient_title"/>

                    <TextView
                        android:id="@+id/setting_ambient_desc"
                        tools:text="Activate ambient display after 20 seconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_alarm_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_sound"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView

                        style="@style/Text.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_setting_alarm_title"/>

                    <TextView
                        android:id="@+id/setting_alarm_sound_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Patriotic Act with Hasan Minhaj - Theme Song..."/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>